[package]
name = "webber"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
mime_guess = "2.0.5"
rusqlite = {version = "0.32.1", features = ["bundled", "serde_json", "chrono"]}
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = {version = "1.11.0", features = ["v7"]}
